Renamed the sidebar toggle button, moved the sidebar logic into a separator custom hook and created a variable for overflowing on the body to prevent scrolling when the sidebar is open, implemented a slide animation with framer motion

--- a/src/components/common/navbar/sidebar/Sidebar.scss
+++ b/src/components/common/navbar/sidebar/Sidebar.scss
@@ -1,51 +1,51 @@
 .sidebar {
-  display: flex;
-  align-items: flex-end;
-  margin-left: auto;
-
   .sidebar__toggle-btn {
-    z-index: 4;
     display: flex;
-    align-items: center;
-    margin-top: 5px;
+    margin-top: 1px;
     background-color: transparent;
     border: none;
 
     svg {
-      position: fixed;
-      width: 24px;
       height: 24px;
+      width: 24px;
       color: var(--accent-color-100);
     }
   }
 
   .sidebar__bg {
-    z-index: 4;
+    z-index: 1;
     position: fixed;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    width: 400px;
-    background-color: var(--sidebar-background-color);
+    inset: var(--navbar-height) 0 0 0;
+    background: var(--gray-500);
 
-    .sidebar__links {
-      height: 100%;
-      display: flex;
+    .sidebar__content {
+      min-height: 100%;
       flex-direction: column;
-      justify-content: center;
-      align-items: center;
       gap: var(--global-gap);
 
-      li {
-        a {
-          color: var(--text-color-secondary);
+      > * {
+        &:not(.quick-search, .separator) {
+          width: var(--content-max-width);
+          margin-inline: auto;
+        }
+      }
 
-          &:hover {
-            color: var(--text-color-primary);
-          }
+      .sidebar__links {
+        display: flex;
+        flex-direction: column;
+        gap: calc(var(--global-gap) / 2);
 
-          &.active {
-            color: var(--accent-color-200);
+        li {
+          a {
+            color: var(--text-color-secondary);
+            display: flex;
+            align-items: center;
+            gap: calc(var(--global-gap) / 2);
+
+            svg {
+              height: 20px;
+              width: 20px;
+            }
           }
         }
       }
