--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -24,6 +24,7 @@ body {
   color: var(--text-color-primary);
   line-height: 1.5;
   text-rendering: optimizeSpeed;
+  overflow: var(--overflow);
 
   ul,
   ol {
